--- a/pwrAPI/makefile
+++ b/pwrAPI/makefile
@@ -1,5 +1,4 @@
 all: dummy.c
-	gcc -g -Wall -o pwrAPINodeExample -dummy.c
-
+	gcc -g -Wall -o pwrAPINodeExample dummy.c
 clean:
 	$(RM) pwrAPINodeExample
