bug fixes to all files

--- a/pwrAPI/makefile
+++ b/pwrAPI/makefile
@@ -1,4 +1,5 @@
 all: dummy.c
-	gcc -g -Wall -o pwrAPINodeExample dummy.c
+	gcc -g -Wall -o pwrAPINodeExample dummy.c -L../variorum/libvariorum.so
+
 clean:
 	$(RM) pwrAPINodeExample
