--- a/pwrAPI/makefile
+++ b/pwrAPI/makefile
@@ -1,5 +1,5 @@
 all: dummy.c
-	gcc -g -Wall -o pwrAPINodeExample dummy.c -L../variorum -lvariorum -ljasson
+	gcc -g -Wall -o pwrAPINodeExample dummy.c  -L../variorum  -l variorum -ljansson
 
 clean:
 	$(RM) pwrAPINodeExample
