add frequency json api

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -19,6 +19,7 @@ set(BASIC_EXAMPLES
     variorum-get-node-power-json-example
     variorum-get-node-power-domain-info-json-example
 	variorum-get-node-thermal-json-example
+	variorum-get-node-frequency-json-example
     variorum-integration-using-json-example
     variorum-get-topology-info-example
     variorum-monitoring-to-file-example
