Updated build configuration for libjustify

--- a/src/variorum/CMakeLists.txt
+++ b/src/variorum/CMakeLists.txt
@@ -123,6 +123,8 @@ else()
                 ${variorum_deps})
 endif()
 
+
+target_link_libraries(variorum PUBLIC ${CPRINTF_LIBRARY})
 target_link_libraries(variorum PUBLIC ${HWLOC_LIBRARY})
 target_link_libraries(variorum PUBLIC ${JANSSON_LIBRARY})
 target_link_libraries(variorum PUBLIC m)
