changed power and domain functions to use nested json API format

--- a/pwrAPI/makefile
+++ b/pwrAPI/makefile
@@ -1,5 +1,5 @@
 all: dummy.c
-	gcc -std=c99 -g -Wall -o pwrAPINodeExample dummy.c  -L/home/fan10/variorum/build/variorum  -lvariorum -ljansson
+	gcc -std=c99 -g -Wall -o pwrAPINodeExample dummy.c  -L../build-lassen/variorum  -lvariorum -ljansson -D_GNU_SOURCE
 
 clean:
 	$(RM) pwrAPINodeExample
