--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -290,7 +290,8 @@ jobs:
           echo -e "MSR_SAFE_VERSION:" ${MSR_SAFE_VERSION}
           AL=$(printf 'al_%.2x_%x\n' $(lscpu | grep "CPU family:" | awk -F: '{print $2}') $(lscpu | grep "Model:" | awk -F: '{print $2}'))
           echo -e "AL:" ${AL}
-          cat allowlists/${AL} > /dev/cpu/msr_allowlist
+          cut -c 3- allowlists/${AL} > allowlists/${AL}_mod
+          cat allowlists/${AL}_mod > /dev/cpu/msr_allowlist
           head -n 5 /dev/cpu/msr_allowlist
 
       - name: Test install with cmake example
