--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -225,20 +225,20 @@ jobs:
           cmake --version
           gcc --version
 
-#      - name: Compile check
-#        env:
-#          BUILD_SHARED_LIBS: ON
-#          BUILD_DOCS: OFF
-#          BUILD_TESTS: OFF
-#          CMAKE_BUILD_TYPE: Release
-#          ENABLE_FORTRAN: ON
-#          ENABLE_MPI: OFF
-#          ENABLE_OPENMP: OFF
-#          VARIORUM_DEBUG: OFF
-#          USE_MSR_SAFE_BEFORE_1_5_0: OFF
-#        run: |
-#          # create out-of-source build and install dir
-#          mkdir build && mkdir install
+      - name: Compile check
+        env:
+          BUILD_SHARED_LIBS: ON
+          BUILD_DOCS: OFF
+          BUILD_TESTS: OFF
+          CMAKE_BUILD_TYPE: Release
+          ENABLE_FORTRAN: ON
+          ENABLE_MPI: OFF
+          ENABLE_OPENMP: OFF
+          VARIORUM_DEBUG: OFF
+          USE_MSR_SAFE_BEFORE_1_5_0: OFF
+        run: |
+          # create out-of-source build and install dir
+          mkdir build && mkdir install
 #          cd build
 #          # setup cmake options
 #          export CMAKE_OPTS="-DBUILD_SHARED_LIBS=${{env.BUILD_SHARED_LIBS}}"
