--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -239,24 +239,24 @@ jobs:
         run: |
           # create out-of-source build and install dir
           mkdir build && mkdir install
-#          cd build
-#          # setup cmake options
-#          export CMAKE_OPTS="-DBUILD_SHARED_LIBS=${{env.BUILD_SHARED_LIBS}}"
-#          export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_DOCS=${{env.BUILD_DOCS}}"
-#          export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_TESTS=${{env.BUILD_TESTS}}"
-#          export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=${{env.CMAKE_BUILD_TYPE}}"
-#          export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_FORTRAN=${{env.ENABLE_FORTRAN}}"
-#          export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_MPI=${{env.ENABLE_MPI}}"
-#          export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_OPENMP=${{env.ENABLE_OPENMP}}"
-#          export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_DEBUG=${{env.VARIORUM_DEBUG}}"
-#          export CMAKE_OPTS="${CMAKE_OPTS} -DUSE_MSR_SAFE_BEFORE_1_5_0=${{env.USE_MSR_SAFE_BEFORE_1_5_0}}"
-#          export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_INSTALL_PREFIX=../install"
-#          echo ${CMAKE_OPTS}
-#          cmake ${CMAKE_OPTS} ../src
-#          # build
-#          VERBOSE=1 make -j
-#          # install
-#          make -j install
+          cd build
+          # setup cmake options
+          export CMAKE_OPTS="-DBUILD_SHARED_LIBS=${{env.BUILD_SHARED_LIBS}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_DOCS=${{env.BUILD_DOCS}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_TESTS=${{env.BUILD_TESTS}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=${{env.CMAKE_BUILD_TYPE}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_FORTRAN=${{env.ENABLE_FORTRAN}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_MPI=${{env.ENABLE_MPI}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_OPENMP=${{env.ENABLE_OPENMP}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DVARIORUM_DEBUG=${{env.VARIORUM_DEBUG}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DUSE_MSR_SAFE_BEFORE_1_5_0=${{env.USE_MSR_SAFE_BEFORE_1_5_0}}"
+          export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_INSTALL_PREFIX=../install"
+          echo ${CMAKE_OPTS}
+          cmake ${CMAKE_OPTS} ../src
+          # build
+          VERBOSE=1 make -j
+          # install
+          make -j install
 
       - name: Clone msr-safe
         uses: actions/checkout@v2
@@ -277,17 +277,17 @@ jobs:
 
       - name: Load msr-safe
         run: |
-#          uname -a
-#          uname -r
-#          cd msr-safe
-#          sudo insmod msr-safe.ko
-#          sudo chmod o=u /dev/cpu/*/msr_safe
-#          sudo chmod o=u /dev/cpu/msr_*
-#          sleep 2
-#          ls -l /dev/cpu
-#          ls -l /dev/cpu/*/msr_safe
-#          MSR_SAFE_VERSION=`cat /sys/module/msr_safe/version`
-#          echo -e "MSR_SAFE_VERSION:" ${MSR_SAFE_VERSION}
+          uname -a
+          uname -r
+          cd msr-safe
+          sudo insmod msr-safe.ko
+          sudo chmod o=u /dev/cpu/*/msr_safe
+          sudo chmod o=u /dev/cpu/msr_*
+          sleep 2
+          ls -l /dev/cpu
+          ls -l /dev/cpu/*/msr_safe
+          MSR_SAFE_VERSION=`cat /sys/module/msr_safe/version`
+          echo -e "MSR_SAFE_VERSION:" ${MSR_SAFE_VERSION}
           AL=$(printf 'al_%.2x_%X\n' $(lscpu | grep "CPU family:" | awk -F: '{print $2}') $(lscpu | grep "Model:" | awk -F: '{print $2}'))
           echo -e "AL:" ${AL}
           cut -c 3- allowlists/${AL} > allowlists/${AL}_mod
