--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -290,6 +290,7 @@ jobs:
           echo -e "MSR_SAFE_VERSION:" ${MSR_SAFE_VERSION}
           AL=$(printf 'al_%.2x_%X\n' $(lscpu | grep "CPU family:" | awk -F: '{print $2}') $(lscpu | grep "Model:" | awk -F: '{print $2}'))
           echo -e "AL:" ${AL}
+          sed -i -e 1,9d allowlists/${AL}
           cut -c 3- allowlists/${AL} > allowlists/${AL}_mod
           cat allowlists/${AL}_mod
           cat allowlists/${AL}_mod > /dev/cpu/msr_allowlist
