update branch name in cztb2 config

--- a/.gitlab/cztb2-build-and-test.yml
+++ b/.gitlab/cztb2-build-and-test.yml
@@ -63,4 +63,5 @@ build-cztb2:
  script:
    - git clone $VARIORUM_ANSIBLE
    - cd variorum-ansible-setup
-   - ansible-playbook variorum-powerlab-playbook.yml --extra-vars "branch=${TARGET_BRANCH}"
+   - MOD_TARGET_BRANCH=$(echo "${TARGET_BRANCH}" | tr "/" "_")
+   - ansible-playbook variorum-powerlab-playbook.yml --extra-vars "branch=${MOD_TARGET_BRANCH}"
