--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,9 +4,10 @@
 
 # Required
 version: 2
-
-conda:
-  environment: src/docs/sphinx/environment.yml
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.11"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
@@ -20,3 +21,6 @@ sphinx:
 formats: all
 
 # Optionally set the version of Python and requirements required to build your docs
+python:
+  install:
+    - requirements: src/docs/sphinx/requirements.txt
