--- a/src/docs/sphinx/conf.py.in
+++ b/src/docs/sphinx/conf.py.in
@@ -19,7 +19,6 @@ if read_the_docs_build:
 # add these directories to sys.path here. If the directory is relative to the
 # documentation root, use os.path.abspath to make it absolute, like shown here.
 sys.path.insert(0, os.path.abspath('.'))
-sys.path.append("@CMAKE_CURRENT_BINARY_DIR@/../../thirdparty_builtin/breathe")
 
 # -- General configuration ------------------------------------------------
 
@@ -35,11 +34,12 @@ extensions = [
     'sphinx.ext.todo',
     'sphinx.ext.coverage',
     'sphinx.ext.mathjax',
-    'breathe'
+    'breathe',
+    'sphinx_rtd_theme',
 ]
 
 # Add any paths that contain templates here, relative to this directory.
-# templates_path = ['@CMAKE_CURRENT_SOURCE_DIR@/_templates']
+# templates_path = []
 
 # The suffix of source filenames.
 source_suffix = '.rst'
@@ -106,12 +106,12 @@ pygments_style = 'sphinx'
 
 # The theme to use for HTML and HTML Help pages.  See the documentation for
 # a list of builtin themes.
-html_theme = 'default'
+html_theme = 'sphinx_rtd_theme'
 
 # Theme options are theme-specific and customize the look and feel of a theme
 # further.  For a list of options available for each theme, see the
 # documentation.
-#html_theme_options = {}
+html_theme_options = {'style_nav_header_background': 'linen','logo_only': True}
 
 # Add any paths that contain custom themes here, relative to this directory.
 #html_theme_path = []
@@ -125,7 +125,7 @@ html_theme = 'default'
 
 # The name of an image file (relative to this directory) to place at the top
 # of the sidebar.
-html_logo = "../../../images/Variorum_3in_1in.png"
+html_logo = "../../../images/variorum-logo.png"
 
 # The name of an image file (within the static path) to use as favicon of the
 # docs.  This file should be a Windows icon file (.ico) being 16x16 or 32x32
@@ -135,7 +135,7 @@ html_logo = "../../../images/Variorum_3in_1in.png"
 # Add any paths that contain custom static files (such as style sheets) here,
 # relative to this directory. They are copied after the builtin static files,
 # so a file named "default.css" will overwrite the builtin "default.css".
-# html_static_path = ['@CMAKE_CURRENT_SOURCE_DIR@/_static']
+# html_static_path = []
 
 # Add any extra paths that contain custom files (such as robots.txt or
 # .htaccess) here, relative to this directory. These files are copied
@@ -267,10 +267,3 @@ texinfo_documents = [
 
 breathe_projects = { "variorum": "@CMAKE_CURRENT_BINARY_DIR@/../dox/xml" }
 breathe_default_project = "variorum"
-
-try:
-    import sphinx_rtd_theme
-    html_theme = "sphinx_rtd_theme"
-    html_theme_path = [sphinx_rtd_theme.get_html_theme_path()]
-except:
-    pass
