--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -14,19 +14,9 @@ jobs:
     strategy:
       matrix:
         cc-version: [11, 10, 9]
-        config: [boilerplate, shared_debug_log_docs, shared_debug_docs, shared_debug_log, shared_debug, static_debug_log_docs, static_debug_docs, static_debug_log, static_debug, shared_release_log_docs]
+        config: [boilerplate, shared_debug_log, shared_debug, static_debug_log, static_debug]
 
         exclude:
-          - config: shared_debug_log_docs
-            cc-version: 11
-          - config: shared_debug_log_docs
-            cc-version: 10
-
-          - config: shared_debug_docs
-            cc-version: 11
-          - config: shared_debug_docs
-            cc-version: 10
-
           - config: shared_debug_log
             cc-version: 11
           - config: shared_debug_log
@@ -37,16 +27,6 @@ jobs:
           - config: shared_debug
             cc-version: 10
 
-          - config: static_debug_log_docs
-            cc-version: 11
-          - config: static_debug_log_docs
-            cc-version: 10
-
-          - config: static_debug_docs
-            cc-version: 11
-          - config: static_debug_docs
-            cc-version: 10
-
           - config: static_debug_log
             cc-version: 11
           - config: static_debug_log
@@ -55,17 +35,11 @@ jobs:
           - config: static_debug
             cc-version: 11
           - config: static_debug
-            cc-version: 10
-
-          - config: shared_release_log_docs
-            cc-version: 11
-          - config: shared_release_log_docs
             cc-version: 10
 
         include:
           - config: boilerplate
             BUILD_SHARED_LIBS: ON
-            BUILD_DOCS: ON
             BUILD_TESTS: ON
             CMAKE_BUILD_TYPE: RelWithDebInfo
             ENABLE_FORTRAN: ON
@@ -74,29 +48,8 @@ jobs:
             VARIORUM_DEBUG: ON
             ENABLE_WARNINGS: ON
 
-          - config: shared_debug_log_docs
-            BUILD_SHARED_LIBS: ON
-            BUILD_DOCS: ON
-            BUILD_TESTS: OFF
-            CMAKE_BUILD_TYPE: Debug
-            ENABLE_FORTRAN: OFF
-            ENABLE_MPI: OFF
-            ENABLE_OPENMP: OFF
-            VARIORUM_DEBUG: ON
-
-          - config: shared_debug_docs
-            BUILD_SHARED_LIBS: ON
-            BUILD_DOCS: ON
-            BUILD_TESTS: OFF
-            CMAKE_BUILD_TYPE: Debug
-            ENABLE_FORTRAN: OFF
-            ENABLE_MPI: OFF
-            ENABLE_OPENMP: OFF
-            VARIORUM_DEBUG: OFF
-
           - config: shared_debug_log
             BUILD_SHARED_LIBS: ON
-            BUILD_DOCS: OFF
             BUILD_TESTS: OFF
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
@@ -106,37 +59,15 @@ jobs:
 
           - config: shared_debug
             BUILD_SHARED_LIBS: ON
-            BUILD_DOCS: OFF
             BUILD_TESTS: OFF
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
             ENABLE_MPI: OFF
             ENABLE_OPENMP: OFF
             VARIORUM_DEBUG: OFF
-
-          - config: static_debug_log_docs
-            BUILD_SHARED_LIBS: OFF
-            BUILD_DOCS: ON
-            BUILD_TESTS: OFF
-            CMAKE_BUILD_TYPE: Debug
-            ENABLE_FORTRAN: OFF
-            ENABLE_MPI: OFF
-            ENABLE_OPENMP: OFF
-            VARIORUM_DEBUG: OFF
-
-          - config: static_debug_docs
-            BUILD_SHARED_LIBS: OFF
-            BUILD_DOCS: ON
-            BUILD_TESTS: OFF
-            CMAKE_BUILD_TYPE: Debug
-            ENABLE_FORTRAN: OFF
-            ENABLE_MPI: OFF
-            ENABLE_OPENMP: OFF
-            VARIORUM_DEBUG: ON
 
           - config: static_debug_log
             BUILD_SHARED_LIBS: OFF
-            BUILD_DOCS: OFF
             BUILD_TESTS: OFF
             CMAKE_BUILD_TYPE: Debug
             ENABLE_FORTRAN: OFF
@@ -146,19 +77,8 @@ jobs:
 
           - config: static_debug
             BUILD_SHARED_LIBS: OFF
-            BUILD_DOCS: OFF
             BUILD_TESTS: OFF
             CMAKE_BUILD_TYPE: Debug
-            ENABLE_FORTRAN: OFF
-            ENABLE_MPI: OFF
-            ENABLE_OPENMP: OFF
-            VARIORUM_DEBUG: OFF
-
-          - config: shared_release_log_docs
-            BUILD_SHARED_LIBS: ON
-            BUILD_DOCS: ON
-            BUILD_TESTS: ON
-            CMAKE_BUILD_TYPE: Release
             ENABLE_FORTRAN: OFF
             ENABLE_MPI: OFF
             ENABLE_OPENMP: OFF
@@ -194,7 +114,6 @@ jobs:
           # setup cmake options
           export CMAKE_OPTS="-DBUILD_SHARED_LIBS=${{matrix.BUILD_SHARED_LIBS}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_C_COMPILER=gcc-${{matrix.cc-version}}"
-          export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_DOCS=${{matrix.BUILD_DOCS}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_TESTS=${{matrix.BUILD_TESTS}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=${{matrix.CMAKE_BUILD_TYPE}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_FORTRAN=${{matrix.ENABLE_FORTRAN}}"
@@ -228,7 +147,6 @@ jobs:
       - name: Compile check
         env:
           BUILD_SHARED_LIBS: ON
-          BUILD_DOCS: OFF
           BUILD_TESTS: OFF
           CMAKE_BUILD_TYPE: Release
           ENABLE_FORTRAN: ON
@@ -242,7 +160,6 @@ jobs:
           cd build
           # setup cmake options
           export CMAKE_OPTS="-DBUILD_SHARED_LIBS=${{env.BUILD_SHARED_LIBS}}"
-          export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_DOCS=${{env.BUILD_DOCS}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_TESTS=${{env.BUILD_TESTS}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=${{env.CMAKE_BUILD_TYPE}}"
           export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_FORTRAN=${{env.ENABLE_FORTRAN}}"
@@ -376,7 +293,6 @@ jobs:
 #
 #    env:
 #      BUILD_SHARED_LIBS: ON
-#      BUILD_DOCS: ON
 #      BUILD_TESTS: ON
 #      CMAKE_BUILD_TYPE: RelWithDebInfo
 #      ENABLE_FORTRAN: ON
@@ -445,7 +361,6 @@ jobs:
 #          cd build
 #          # setup cmake options
 #          export CMAKE_OPTS="-DBUILD_SHARED_LIBS=${{env.BUILD_SHARED_LIBS}}"
-#          export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_DOCS=${{env.BUILD_DOCS}}"
 #          export CMAKE_OPTS="${CMAKE_OPTS} -DBUILD_TESTS=${{env.BUILD_TESTS}}"
 #          export CMAKE_OPTS="${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=${{env.CMAKE_BUILD_TYPE}}"
 #          export CMAKE_OPTS="${CMAKE_OPTS} -DENABLE_FORTRAN=${{env.ENABLE_FORTRAN}}"
@@ -462,5 +377,3 @@ jobs:
 #          VERBOSE=1 make -j
 #          # install
 #          make -j install
-#          # build docs
-#          make -j docs
