CI: add output of model name from /proc/cpuinfo
Running into job failures when loading msr-safe because CPU is unsupported.
This provides more details as to which CPUs we are getting with GitHub Actions.

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -230,6 +230,7 @@ jobs:
         run: |
           uname -a
           uname -r
+          cat /proc/cpuinfo | grep "model name"
           cd msr-safe
           sudo insmod msr-safe.ko
           sudo chmod o=u /dev/cpu/*/msr_safe
