Add echo statements to two of the Gitlab clusters to test if updating without merging works for tests.

--- a/.gitlab/corona-gpu-build-and-test.yml
+++ b/.gitlab/corona-gpu-build-and-test.yml
@@ -62,6 +62,8 @@ build-corona-gpu:
    - cmake -C ${HOST_CONFIG} -DCMAKE_BUILD_TYPE=Debug -DCMAKE_INSTALL_PREFIX=../install-gitlab-corona -DBUILD_TESTS=ON -DENABLE_WARNINGS=ON ../src
    - make VERBOSE=1
    - make install
+   - echo -e "This is Tapasya's test on Corona GPU." 
+
 # disabling for now
 #   - env CTEST_OUTPUT_ON_FAILURE=1 make test
 #   - cd ..
