--- a/.gitlab/lassen-cpu-build-and-test.yml
+++ b/.gitlab/lassen-cpu-build-and-test.yml
@@ -86,3 +86,4 @@ build-lassen-cpu:
    - echo -e "PWD:" ${PWD}
    - make VERBOSE=1 F77=/usr/tce/packages/gcc/gcc-8.3.1/bin/gfortran FFLAGS=-O
    - ./ep.W.x
+   - echo -e "This is Tapasya's test on Lassen CPU." 
