The GPU tests on Lassen and Corona should be available without an allocation. Need to update cztb2 yaml to do the same.

--- a/.gitlab/lassen-gpu-build-and-test.yml
+++ b/.gitlab/lassen-gpu-build-and-test.yml
@@ -86,3 +86,4 @@ build-lassen-gpu:
    - echo -e "PWD:" ${PWD}
    - make VERBOSE=1 F77=/usr/tce/packages/gcc/gcc-8.3.1/bin/gfortran FFLAGS=-O
    - ./ep.W.x
+   - ./examples/variorum-get-power-json-example 
