--- a/.gitlab/corona-gpu-build-and-test.yml
+++ b/.gitlab/corona-gpu-build-and-test.yml
@@ -62,7 +62,7 @@ build-corona-gpu:
    - cmake -C ${HOST_CONFIG} -DCMAKE_BUILD_TYPE=Debug -DCMAKE_INSTALL_PREFIX=../install-gitlab-corona -DBUILD_TESTS=ON -DENABLE_WARNINGS=ON ../src
    - make VERBOSE=1
    - make install
-   - echo -e "This is Tapasya's test on Corona GPU." 
+   - ./examples/variorum-get-power-json-example 
 
 # disabling for now
 #   - env CTEST_OUTPUT_ON_FAILURE=1 make test
