gitlab: update corona to run on a compute node

--- a/.gitlab/corona-gpu-build-and-test.yml
+++ b/.gitlab/corona-gpu-build-and-test.yml
@@ -48,7 +48,7 @@ status_failure:
 build-corona-gpu:
  tags:
    - corona
-   - shell
+   - batch
  stage: build
  script:
    - export HOSTNAME=`hostname`
