add LLNL_FLUX_SCHEDULER_PARAMETERS to gitlab

--- a/.gitlab/corona-gpu-build-and-test.yml
+++ b/.gitlab/corona-gpu-build-and-test.yml
@@ -49,6 +49,8 @@ build-corona-gpu:
  tags:
    - corona
    - batch
+ variables:
+    LLNL_FLUX_SCHEDULER_PARAMETERS: "--nodes=1 --ntasks=1 --t=10m"
  stage: build
  script:
    - export HOSTNAME=`hostname`
