--- a/.gitlab/corona-gpu-build-and-test.yml
+++ b/.gitlab/corona-gpu-build-and-test.yml
@@ -50,7 +50,7 @@ build-corona-gpu:
    - corona
    - batch
  variables:
-    LLNL_FLUX_SCHEDULER_PARAMETERS: "--nodes=1 --ntasks=1 --t=10m"
+    LLNL_FLUX_SCHEDULER_PARAMETERS: "--nodes=1 --nslots=1 --t=10m"
  stage: build
  script:
    - export HOSTNAME=`hostname`
