Add variorum_get_energy_json API for IBM

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -46,6 +46,7 @@ set(BASIC_EXAMPLES
     variorum-print-verbose-power-limit-example
     variorum-print-verbose-thermals-example
     variorum-print-verbose-energy-example
+    variorum-get-energy-json-example
 )
 
 message(STATUS "Adding variorum examples")
