I'm baffled because I don't see my printfs...but they may be getting lost. Trying a few other things to see if ESMI is loaded and setting default to allow print_power

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -255,6 +255,7 @@ jobs:
           cd _test_build
           cmake ../
           make VERBOSE=1
+          ldd ./variorum-print-power-example
           ./variorum-print-power-example
 
       - name: Test install with make examples
