See if the node has amd_energy and hsmp, force setting of function pointers without any checks. Things shoul fail differently now.

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -256,6 +256,8 @@ jobs:
           cmake ../
           make VERBOSE=1
           ldd ./variorum-print-power-example
+          lsmod | grep amd_energy
+          lsmod | grep hsmp
           ./variorum-print-power-example
 
       - name: Test install with make examples
