Try to build amd_energy driver as that is missing

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -246,6 +246,14 @@ jobs:
           cat allowlists/${AL}_mod > /dev/cpu/msr_allowlist
           head -n 5 /dev/cpu/msr_allowlist
 
+     - name: Install amd_energy driver
+       run: | 
+          git clone https://github.com/amd/amd_energy
+          cd amd_energy
+          make
+          sudo make modules_install
+          sudo modprobe amd_energy
+
       - name: Test install with cmake example
         run: |
           cd ${GITHUB_WORKSPACE} && cd install
@@ -256,7 +264,7 @@ jobs:
           cmake ../
           make VERBOSE=1
           ldd ./variorum-print-power-example
-          lsmod 
+          lsmod | grep amd_energy 
           #lsmod | grep hsmp
           #./variorum-print-power-example
 
