specify partition with variable

--- a/.gitlab/lassen-gpu-build-and-test.yml
+++ b/.gitlab/lassen-gpu-build-and-test.yml
@@ -47,8 +47,10 @@ status_failure:
 
 build-lassen-gpu:
  tags:
-   - ci
+   - batch
    - lassen
+ variables:
+    LLNL_LSF_SCHEDULER_PARAMETERS: "-q pci"
  stage: build
  script:
    - export HOSTNAME=`hostname`
