Lassen use ci partition (#516)
* gitlab: use ci partition on lassen

--- a/.gitlab/lassen-cpugpu-build-and-test.yml
+++ b/.gitlab/lassen-cpugpu-build-and-test.yml
@@ -49,6 +49,8 @@ build-lassen-both:
  tags:
    - batch
    - lassen
+ variables:
+    LLNL_LSF_SCHEDULER_PARAMETERS: "-q pci"
  stage: build
  script:
    - export HOSTNAME=`hostname`
