set LD_LIBRARY_PATH

--- a/.gitlab/lassen-gpu-build-and-test.yml
+++ b/.gitlab/lassen-gpu-build-and-test.yml
@@ -71,9 +71,10 @@ build-lassen-gpu:
    - cmake --version
    - cd install-gitlab-lassen-gpu/examples/using-with-cmake/c
    - echo -e "PWD:" ${PWD}
+   - export LD_LIBRARY_PATH=/usr/tce/packages/cuda/cuda-10.1.243/lib64:${LD_LIBRARY_PATH}  # hack for getting older cuda
    - mkdir _test_build
    - cd _test_build
-   - cmake -DCMAKE_EXE_LINKER_FLAGS="${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath -Wl,/usr/tce/packages/cuda/cuda-10.1.243/lib64" ../
+   - cmake ../
    - make VERBOSE=1
    - ./variorum-print-power-example
    - cd ../../../using-with-make/c
