Energy APIs: Print and JSON (#530)
Expands support for variorum_print_energy other than AMD and adds two new APIs -- variorum_print_verbose_energy, variorum_get_energy_json on Intel and IBM platforms.
---------

Co-authored-by: Tapasya Patki <patki1@llnl.gov>
Co-authored-by: Aniruddha Marathe <marathe1@llnl.gov>
Co-authored-by: Stephanie Brink <brink2@llnl.gov>

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -16,6 +16,7 @@ set(BASIC_EXAMPLES
     variorum-cap-socket-power-limit-example
     variorum-disable-turbo-example
     variorum-enable-turbo-example
+    variorum-get-energy-json-example
     variorum-get-frequency-json-example
     variorum-get-node-power-domain-info-json-example
     variorum-get-power-json-example
@@ -39,6 +40,7 @@ set(BASIC_EXAMPLES
     variorum-print-topology-example
     variorum-print-turbo-example
     variorum-print-verbose-counters-example
+    variorum-print-verbose-energy-example
     variorum-print-verbose-frequency-example
     variorum-print-verbose-gpu-utilization-example
     variorum-print-verbose-power-example
